# uk-controller-plugin

./: .clang-format  .clang-format-ignore  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .releaserc.json  BUILD_CLANG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPPLINT.cfg  UKControllerPlugin.cbp  UKControllerPlugin.sln  appveyor.yml  conandata.yml  conanfile.py  dockerfile  ecfmp-complete-fixes.patch  format.sh  mountable.dockerfile  nuget.config  package-lock.json  package.json
src/loader/: CMakeLists.txt  UKControllerPluginLoader.vcxproj  UKControllerPluginLoader.vcxproj.filters  dllmain.cpp  loader.cpp  loader.h  loaderfunctions.cpp  loaderfunctions.h  pch.cpp  pch.h
src/loader/loader/: loader.cpp  loader.h
src/loader/pch/: pch.h
src/updater/: CMakeLists.txt  PerformUpdates.cpp  PerformUpdates.h  UKControllerPluginUpdater.h  UKControllerPluginUpdater.vcxproj  UKControllerPluginUpdater.vcxproj.filters  dllmain.cpp  pch.cpp  pch.h  updateplugin.cpp
src/updater/pch/: pch.cpp  pch.h
src/updater/updater/: PerformUpdates.cpp  PerformUpdates.h
src/utils/: CMakeLists.txt  UKControllerPluginUtils.vcxproj  UKControllerPluginUtils.vcxproj.filters  pch.cpp  pch.h  utils.manifest
src/utils/api/: AbstractApiRequestPerformerFactory.h  ApiAuthChecker.cpp  ApiAuthChecker.h  ApiAuthorisationRequestFactory.cpp  ApiAuthorisationRequestFactory.h  ApiBootstrap.cpp  ApiBootstrap.h  ApiConfigurationListener.cpp  ApiConfigurationListener.h  ApiConfigurationListenerInterface.h  ApiCurlRequestFactory.cpp  ApiCurlRequestFactory.h  ApiException.h  ApiFactory.cpp  ApiFactory.h  ApiHeaderApplicator.cpp  ApiHeaderApplicator.h  ApiHelper.cpp  ApiHelper.h  ApiInterface.h  ApiKeyReceivedEvent.h  ApiKeyRedirectUrlBuilder.cpp  ApiKeyRedirectUrlBuilder.h  ApiNotAuthorisedException.cpp  ApiNotAuthorisedException.h  ApiNotFoundException.h  ApiRequest.cpp  ApiRequest.h  ApiRequestBuilder.cpp  ApiRequestBuilder.h  ApiRequestData.cpp  ApiRequestData.h  ApiRequestException.cpp  ApiRequestException.h  ApiRequestFacade.cpp  ApiRequestFacade.h  ApiRequestFactory.cpp  ApiRequestFactory.h  ApiRequestFactoryFactory.cpp  ApiRequestFactoryFactory.h  (+33 more)
src/utils/collection/: Collection.h  Collection.tpp  CollectionIterator.h  CollectionIterator.tpp
src/utils/curl/: CurlApi.cpp  CurlApi.h  CurlInterface.cpp  CurlInterface.h  CurlRequest.cpp  CurlRequest.h  CurlResponse.cpp  CurlResponse.h  HttpException.h
src/utils/data/: PluginDataLocations.cpp  PluginDataLocations.h
src/utils/dialog/: CompareDialogs.cpp  CompareDialogs.h  DialogCallArgument.h  DialogData.cpp  DialogData.h  DialogManager.cpp  DialogManager.h  DialogProviderInterface.h
src/utils/duplicate/: DuplicatePlugin.cpp  DuplicatePlugin.h
src/utils/eventhandler/: DrainableEuroscopeThreadEventSink.h  EuroscopeThreadEventProcessor.cpp  EuroscopeThreadEventProcessor.h  EuroscopeThreadEventSink.h  EventBus.cpp  EventBus.h  EventBus.tpp  EventBusFactory.h  EventHandler.h  EventHandlerFlags.h  EventObserver.h  EventStream.h  EventStream.tpp  MutableEventBus.cpp  MutableEventBus.h  StandardEventBusFactory.cpp  StandardEventBusFactory.h
src/utils/helper/: HelperFunctions.cpp  HelperFunctions.h
src/utils/http/: HttpMethod.cpp  HttpMethod.h  HttpStatusCode.h
src/utils/log/: ApiLogger.cpp  ApiLogger.h  ApiLoggerInterface.h  LoggerBootstrap.cpp  LoggerBootstrap.h  LoggerFunctions.cpp  LoggerFunctions.h
src/utils/pch/: pch.cpp  pch.h
src/utils/setting/: JsonFileSettingProvider.cpp  JsonFileSettingProvider.h  SettingProviderInterface.h  SettingRepository.cpp  SettingRepository.h  SettingRepositoryFactory.cpp  SettingRepositoryFactory.h  SettingRepositoryInterface.h  SettingValue.h
src/utils/squawk/: ApiSquawkAllocation.cpp  ApiSquawkAllocation.h  SquawkValidator.cpp  SquawkValidator.h
src/utils/srd/: SrdSearchParameters.h
src/utils/string/: StringTrimFunctions.cpp  StringTrimFunctions.h
src/utils/task/: RunAsyncTask.cpp  RunAsyncTask.h  TaskRunner.cpp  TaskRunner.h  TaskRunnerInterface.h
src/utils/time/: SystemClock.cpp
src/utils/update/: BootstrapReleaseChannelSettings.cpp  BootstrapReleaseChannelSettings.h  CheckDevelopmentVersion.cpp  CheckDevelopmentVersion.h  LoadChangelog.cpp  PluginVersion.cpp  PluginVersion.h  UpdateBinaries.cpp  UpdateBinaries.h
src/utils/windows/: WinApi.cpp  WinApi.h  WinApiBootstrap.cpp  WinApiBootstrap.h  WinApiInterface.cpp  WinApiInterface.h
test/googlemock/: CMakeLists.txt  GoogleMock.vcxproj  GoogleMock.vcxproj.filters
test/loader/: CMakeLists.txt  UKControllerPluginLoaderTest.vcxproj  UKControllerPluginLoaderTest.vcxproj.filters
test/loader/loader/: LoaderTest.cpp
test/loader/pch/: pch.h
test/plugin/: CMakeLists.txt  UKControllerPluginTest.vcxproj  UKControllerPluginTest.vcxproj.filters
test/plugin/aircraft/: AircraftModuleTest.cpp  AircraftTypeCollectionFactoryTest.cpp  AircraftTypeCollectionTest.cpp  AircraftTypeFactoryTest.cpp  AircraftTypeTest.cpp  CallsignSelectionListFactoryBootstrapTest.cpp  CallsignSelectionListFactoryTest.cpp  CallsignSelectionListTest.cpp  FlightplanAircraftTypeMapperTest.cpp
test/plugin/airfield/: AirfieldCollectionFactoryTest.cpp  AirfieldCollectionTest.cpp  AirfieldModelTest.cpp  AirfieldModuleTest.cpp
test/plugin/api/: ApiConfigurationMenuItemTest.cpp  BootstrapApiTest.cpp  FirstTimeApiAuthorisationCheckerTest.cpp  FirstTimeApiConfigLoaderTest.cpp
test/plugin/approach/: AircraftSelectionProviderTest.cpp  AirfieldMinimumSeparationSelectorListTest.cpp  AirfieldTargetSelectorListTest.cpp  ApproachBootstrapProviderTest.cpp  ApproachFlightplanEventHandlerTest.cpp  ApproachModuleFactoryTest.cpp  ApproachSequenceTest.cpp  ApproachSequencedAircraftTest.cpp  (+15 more)
test/testingutils/: CMakeLists.txt  UKControllerPluginTestingUtils.vcxproj  UKControllerPluginTestingUtils.vcxproj.filters
test/updater/: CMakeLists.txt  UKControllerPluginUpdaterTest.vcxproj  UKControllerPluginUpdaterTest.vcxproj.filters
test/utils/: CMakeLists.txt  UKControllerPluginUtilsTest.vcxproj  UKControllerPluginUtilsTest.vcxproj.filters
(+3162 files in other folders)
